# rpi_2d_to_pointcloud

./: README.md  camera_depth.py  camera_rgb.py  cpp_fusion_log.csv  detection.py  fusion.py  main.py  main_baseline_log.csv  run_optimized_fusion.sh  visualize.py
cpp_optimized/: CMakeLists.txt
cpp_optimized/include/: camera_depth.hpp  camera_rgb.hpp  performance_logger.hpp  ply_writer.hpp  rgb_depth_fusion.hpp  rgb_reader.hpp  thread_pipeline.hpp
cpp_optimized/src/: camera_depth.cpp  camera_rgb.cpp  main.cpp  performance_logger.cpp  ply_writer.cpp  rgb_depth_fusion.cpp  test_camera_depth.cpp  test_camera_rgb.cpp  thread_pipeline.cpp
fused_cloud/: fused_cloud_0.ply  fused_cloud_1.ply  fused_cloud_10.ply  fused_cloud_11.ply  fused_cloud_12.ply  fused_cloud_13.ply  fused_cloud_14.ply  fused_cloud_15.ply  fused_cloud_16.ply  fused_cloud_17.ply  fused_cloud_18.ply  fused_cloud_19.ply  fused_cloud_2.ply  fused_cloud_20.ply  fused_cloud_21.ply  fused_cloud_22.ply  fused_cloud_23.ply  fused_cloud_24.ply  fused_cloud_25.ply  fused_cloud_26.ply  fused_cloud_27.ply  fused_cloud_28.ply  fused_cloud_29.ply  fused_cloud_3.ply  fused_cloud_30.ply  fused_cloud_31.ply  fused_cloud_32.ply  fused_cloud_33.ply  fused_cloud_34.ply  fused_cloud_35.ply  fused_cloud_36.ply  fused_cloud_37.ply  fused_cloud_38.ply  fused_cloud_39.ply  fused_cloud_4.ply  fused_cloud_40.ply  fused_cloud_41.ply  fused_cloud_42.ply  fused_cloud_43.ply  fused_cloud_44.ply  (+31 more)
fused_pointclouds/: fused_cloud_0.ply  fused_cloud_1.ply  fused_cloud_10.ply  fused_cloud_11.ply  fused_cloud_12.ply  fused_cloud_13.ply  (+39 more)
(+7 files in other folders)
